code2model-example/example.deployment/example/templates/example-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: example-network
  labels:
    name: example-network
    project: example
