code2model-example/example.deployment/example/templates/example.config-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: example.config
  namespace: example-network
  labels:
    project: example
    app: example.config
    group: org.example
    version: 0.0.1-SNAPSHOT
    provider: john.doe
spec:
  template:
    spec:
      containers:
      - name: example.config
        image: gcr.io/example/example.config:0.0.1-SNAPSHOT
        imagePullPolicy: IfNotPresent
        ports:
        - name: rest
          containerPort: 8888
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
