code2model-example/example.deployment/example/templates/example.couchbase-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: example.couchbase
  namespace: code2model-001
  labels:
    app: example.couchbase
    provider: john.doe
    group: org.example
    project: example
    version: 0.0.1-SNAPSHOT
spec:
  replicas: 2
  template:
    spec:
      terminationGracePeriodSeconds: 30
      containers:
      - name: example.couchbase
        image: gcr.io/example/example.couchbase:0.0.1-SNAPSHOT
        ports:
        - name: client
          containerPort: 2379
        - name: peer
          containerPort: 2380
        volumeMounts:
        - name: example.couchbase-data
          mountPath: /opt/couchbase/var
      restartPolicy: Always
  volumeClaimTemplates:
  - metadata:
      name: example.couchbase-data
      annotations:
        volume.alpha.kubernetes.io/storage-class: anything
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 1Gi
