code2model-example/example.deployment/example/templates/example.elasticsearch-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: example.elasticsearch
  namespace: example-network
  labels:
    app: example.elasticsearch
    provider: john.doe
    group: org.example
    project: example
    version: 0.0.1-SNAPSHOT
spec:
  replicas: 1
  template:
    spec:
      containers:
      - name: example.elasticsearch
        image: gcr.io/example/example.elasticsearch:0.0.1-SNAPSHOT
        imagePullPolicy: IfNotPresent
        ports:
        - name: api
          containerPort: 9200
        - name: transport
          containerPort: 9300
        volumeMounts:
        - name: es-persistent-storage
          mountPath: /var/lib/es
      volumes:
      - name: es-persistent-storage
        persistentVolumeClaim:
          claimName: es-volume-claim
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
