code2model-example/example.deployment/example/templates/example.oauth2-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: example.oauth2
  namespace: example-network
  labels:
    project: example
    app: example.oauth2
    group: org.example
    version: 0.0.1-SNAPSHOT
    provider: john.doe
spec:
  template:
    spec:
      containers:
      - name: example.oauth2
        image: gcr.io/example/example.oauth2:0.0.1-SNAPSHOT
        imagePullPolicy: IfNotPresent
        ports:
        - name: rest
          containerPort: 8081
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
