code2model-example/example.deployment/example/templates/example.users-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: example.users
  namespace: example-network
  labels:
    project: example
    app: example.users
    group: org.example
    version: 0.0.1-SNAPSHOT
    provider: john.doe
spec:
  template:
    spec:
      containers:
      - name: example.users
        image: gcr.io/example/example.users:0.0.1-SNAPSHOT
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 8091
        - name: grpc
          containerPort: 7091
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
