code2model-example/example.deployment/example/templates/example.couchbase-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: example.couchbase
  namespace: code2model-001
  labels:
    app: example.couchbase
    provider: john.doe
    group: org.example
    project: example
    version: 0.0.1-SNAPSHOT
spec:
  selector:
    app: example.couchbase
  ports:
  - port: 2379
    name: client
    targetPort: client
  - port: 2380
    name: peer
    targetPort: peer
