code2model-example/example.deployment/example/templates/example.elasticsearch-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: example.elasticsearch
  namespace: example-network
  labels:
    app: example.elasticsearch
    provider: john.doe
    group: org.example
    project: example
    version: 0.0.1-SNAPSHOT
spec:
  selector:
    app: example.elasticsearch
  ports:
  - name: api
    port: 9200
  - name: transport
    port: 9300
