code2model-example/example.deployment/example/templates/example.oauth2-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: example.oauth2
  namespace: example-network
  labels:
    project: example
    app: example.oauth2
    group: org.example
    version: 0.0.1-SNAPSHOT
    provider: john.doe
spec:
  selector:
    app: example.oauth2
  ports:
  - name: rest
    port: 8081
