code2model-example/example.deployment/example/templates/example.users-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: example.users
  namespace: example-network
  labels:
    project: example
    app: example.users
    group: org.example
    version: 0.0.1-SNAPSHOT
    provider: john.doe
spec:
  selector:
    app: example.users
  ports:
  - name: grpc
    port: 7091
  - name: rest
    port: 8091
  - name: soap
    port: 9091
